Implemented product update and create, added tags